# trace-viewer

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-26-trace-viewer-implementation.md
docs/superpowers/specs/: 2026-05-26-trace-viewer-design.md
src/trace_viewer/: __main__.py  cli.py  discovery.py  models.py
src/trace_viewer/export/: __init__.py  common.py  html.py  markdown.py
src/trace_viewer/parsers/: __init__.py  codex.py  opencode.py
src/trace_viewer/tui/: __init__.py  app.py
tests/: test_cli.py  test_codex_parser.py  test_discovery.py  test_export.py  test_opencode_parser.py  test_tui.py
tests/fixtures/: codex_bad.jsonl  codex_real_format.jsonl  codex_session.jsonl  opencode_anthropic_session.jsonl  opencode_bad.jsonl  opencode_error_session.jsonl  opencode_session.jsonl
