[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-viewer"
version = "0.1.0"
description = "Read Codex traces in a Textual TUI and export readable reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.80",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
trace-viewer = "trace_viewer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
